# local-ai-notetaker

./: .gitignore  README.md  pyproject.toml
offline_meeting_notes/: cli.py  convert_audio_files.py  note_taker_pipeline.py  ollama_notes.py  transcription.py
offline_meeting_notes/tools/: model_preloader.py  validate_inputs.py
src/: cli.py  convert_audio_files.py  note_taker_pipeline.py  ollama_notes.py  transcription.py
src/lain/: cli.py  convert_audio_files.py  note_taker_pipeline.py  ollama_notes.py  transcription.py
src/lain/prompts/: system_prompt.txt  user_prompt.txt
src/lain/tools/: log.py  model_preloader.py  validate_inputs.py
src/tools/: model_preloader.py  validate_inputs.py
