[project]
requires-python = ">=3.11,<3.14"
name = "offline_meeting_notes"
version = "0.1.0"
description = "Offline meeting notetaker using pyannote.audio, Whisper, and transformers."
readme = "README.md"
dependencies = [
    "pyannote.audio",
    "openai-whisper",
    "transformers",
    "pytest",
    "accelerate",
    "triton==3.4",
    "kernels",
    "pypandoc",
    "whisperx",
    "librosa",
    "scipy",
    "numpy",
    "ollama",
    "torch",
    "torchvision",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130" },
]
torchvision = [
  { index = "pytorch-cu130" },
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[project.scripts]
offline-meeting-notes = "src.cli:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

