[project]
requires-python = "==3.12.12"
name = "offline_meeting_notes"
version = "0.1.0"
description = "Offline meeting notetaker using NeMo Parakeet ASR and transformers."
readme = "README.md"
dependencies = [
    "pyannote.audio",
    "nemo_toolkit[asr]",
    "lhotse<1.31",
    "transformers",
    "pytest",
    "accelerate",
    # "triton==3.4",
    "kernels",
    "pypandoc",
    "scipy",
    "numpy",
    "ollama",
    "cuda-python>=12.3",
    "torch>=2.10",
    "torchaudio>=2.10",
    "torchcodec",
    "torchvision",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130" },
]
torchaudio = [
  { index = "pytorch-cu130" },
]
torchvision = [
  { index = "pytorch-cu130" },
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true



[project.scripts]
lain = "lain.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lain"]
